"""Initial migration with Audit Logging

Revision ID: d77508c6a7df
Revises:
Create Date: 2026-01-21 10:58:17.916585

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = 'd77508c6a7df'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('instances',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('name', sa.String(length=120), nullable=False),
    sa.Column('base_url', sa.String(length=500), nullable=False),
    sa.Column('api_key', sa.Text(), nullable=False),
    sa.Column('redirect_url', sa.String(length=500), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('name', name='uq_gophish_instance_name')
    )
    with op.batch_alter_table('instances', schema=None) as batch_op:
        batch_op.create_index('ix_gophish_instances_name', ['name'], unique=False)

    op.create_table('tenants',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('name', sa.String(length=200), nullable=False),
    sa.Column('gophish_group_id', sa.Integer(), nullable=True),
    sa.Column('instance_id', sa.Integer(), nullable=True),
    sa.Column('operator_id', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['instance_id'], ['instances.id'], ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['operator_id'], ['users.id'], name='fk_tenant_operator', ondelete='SET NULL', use_alter=True),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('name', name='uq_tenant_name')
    )
    with op.batch_alter_table('tenants', schema=None) as batch_op:
        batch_op.create_index('ix_tenants_name', ['name'], unique=False)

    op.create_table('targets',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('email', sa.String(length=255), nullable=False),
    sa.Column('first_name', sa.String(length=100), nullable=False),
    sa.Column('last_name', sa.String(length=100), nullable=False),
    sa.Column('position', sa.String(length=100), nullable=True),
    sa.Column('tenant_id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['tenant_id'], ['tenants.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email', 'tenant_id', name='uq_target_email_tenant')
    )
    with op.batch_alter_table('targets', schema=None) as batch_op:
        batch_op.create_index('ix_targets_email', ['email'], unique=False)
        batch_op.create_index('ix_targets_tenant_id', ['tenant_id'], unique=False)

    op.create_table('tenant_invitations',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('invitation_code', sa.String(length=64), nullable=False),
    sa.Column('tenant_id', sa.Integer(), nullable=False),
    sa.Column('is_used', sa.Boolean(), nullable=False),
    sa.Column('used_at', sa.DateTime(), nullable=True),
    sa.Column('used_by_user_id', sa.BigInteger(), nullable=True),
    sa.Column('expires_at', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['tenant_id'], ['tenants.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('invitation_code', name='uq_tenant_invitation_code')
    )
    with op.batch_alter_table('tenant_invitations', schema=None) as batch_op:
        batch_op.create_index('ix_tenant_invitations_code', ['invitation_code'], unique=False)
        batch_op.create_index('ix_tenant_invitations_is_used', ['is_used'], unique=False)
        batch_op.create_index('ix_tenant_invitations_tenant_id', ['tenant_id'], unique=False)

    op.create_table('users',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('email', sa.String(length=255), nullable=False),
    sa.Column('first_name', sa.String(length=100), nullable=False),
    sa.Column('last_name', sa.String(length=100), nullable=False),
    sa.Column('password_hash', sa.String(length=255), nullable=False),
    sa.Column('tenant_id', sa.Integer(), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('is_admin', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['tenant_id'], ['tenants.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email', name='uq_user_email')
    )
    with op.batch_alter_table('users', schema=None) as batch_op:
        batch_op.create_index('ix_users_email', ['email'], unique=False)
        batch_op.create_index('ix_users_tenant_id', ['tenant_id'], unique=False)

    op.create_table('audit_logs',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('tenant_id', sa.Integer(), nullable=False),
    sa.Column('action', sa.String(length=100), nullable=False),
    sa.Column('resource_type', sa.String(length=100), nullable=True),
    sa.Column('resource_id', sa.String(length=100), nullable=True),
    sa.Column('details', sa.JSON(), nullable=True),
    sa.Column('ip_address', sa.String(length=45), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['tenant_id'], ['tenants.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('audit_logs', schema=None) as batch_op:
        batch_op.create_index('ix_audit_logs_created_at', ['created_at'], unique=False)
        batch_op.create_index('ix_audit_logs_tenant_id', ['tenant_id'], unique=False)
        batch_op.create_index('ix_audit_logs_user_id', ['user_id'], unique=False)

    op.create_table('templates',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('gophish_instance_id', sa.Integer(), nullable=False),
    sa.Column('gophish_email_template_id', sa.Integer(), nullable=False),
    sa.Column('gophish_landing_page_id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=200), nullable=False),
    sa.Column('created_by_user_id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['created_by_user_id'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['gophish_instance_id'], ['instances.id'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('gophish_instance_id', 'gophish_email_template_id', 'gophish_landing_page_id', name='uq_template_map')
    )
    with op.batch_alter_table('templates', schema=None) as batch_op:
        batch_op.create_index('ix_template_maps_instance_id', ['gophish_instance_id'], unique=False)
        batch_op.create_index('ix_template_maps_name', ['name'], unique=False)

    op.create_table('campaigns',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('gophish_instance_id', sa.Integer(), nullable=False),
    sa.Column('gophish_campaign_id', sa.Integer(), nullable=False),
    sa.Column('tenant_id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=200), nullable=False),
    sa.Column('status', sa.Enum('DRAFT', 'RUNNING', 'STOPPED', 'ARCHIVED', name='campaignstatus'), nullable=False),
    sa.Column('created_by_user_id', sa.Integer(), nullable=False),
    sa.Column('template_id', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('launched_at', sa.DateTime(), nullable=True),
    sa.Column('stopped_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['created_by_user_id'], ['users.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['gophish_instance_id'], ['instances.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['template_id'], ['templates.id'], ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['tenant_id'], ['tenants.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('tenant_id', 'gophish_instance_id', 'gophish_campaign_id', name='uq_campaign_gophish_map')
    )
    with op.batch_alter_table('campaigns', schema=None) as batch_op:
        batch_op.create_index('ix_campaigns_instance_id', ['gophish_instance_id'], unique=False)
        batch_op.create_index('ix_campaigns_tenant_id', ['tenant_id'], unique=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('campaigns', schema=None) as batch_op:
        batch_op.drop_index('ix_campaigns_tenant_id')
        batch_op.drop_index('ix_campaigns_instance_id')

    op.drop_table('campaigns')
    with op.batch_alter_table('templates', schema=None) as batch_op:
        batch_op.drop_index('ix_template_maps_name')
        batch_op.drop_index('ix_template_maps_instance_id')

    op.drop_table('templates')
    with op.batch_alter_table('audit_logs', schema=None) as batch_op:
        batch_op.drop_index('ix_audit_logs_user_id')
        batch_op.drop_index('ix_audit_logs_tenant_id')
        batch_op.drop_index('ix_audit_logs_created_at')

    op.drop_table('audit_logs')
    with op.batch_alter_table('users', schema=None) as batch_op:
        batch_op.drop_index('ix_users_tenant_id')
        batch_op.drop_index('ix_users_email')

    op.drop_table('users')
    with op.batch_alter_table('tenant_invitations', schema=None) as batch_op:
        batch_op.drop_index('ix_tenant_invitations_tenant_id')
        batch_op.drop_index('ix_tenant_invitations_is_used')
        batch_op.drop_index('ix_tenant_invitations_code')

    op.drop_table('tenant_invitations')
    with op.batch_alter_table('targets', schema=None) as batch_op:
        batch_op.drop_index('ix_targets_tenant_id')
        batch_op.drop_index('ix_targets_email')

    op.drop_table('targets')
    with op.batch_alter_table('tenants', schema=None) as batch_op:
        batch_op.drop_index('ix_tenants_name')

    op.drop_table('tenants')
    with op.batch_alter_table('instances', schema=None) as batch_op:
        batch_op.drop_index('ix_gophish_instances_name')

    op.drop_table('instances')
    # ### end Alembic commands ###
